LCDF Typetools NEWS

Version 0.16

* otftotfm: Add '--ligkern' option.

* otftotfm: Remove virtual font 'N.vf' when installing a regular font
  'N.tfm' in automatic mode. This reduces the risk that an old virtual font
  will screw up your installation.


Version 0.15   4.Jul.2003

* otftotfm: Bug fix: Don't multiply apply substitutions and kerns from the
  same lookup.

* otftotfm: Supports simple left-contextual substitutions, necessary for
  ExPontoPro's 'calt' (Contextual Alternates) feature.


Version 0.14   2.Jul.2003

* otftotfm: Add '-L/--letterspacing' option at Bruce D'Arcus's request.

* otftotfm: Hypothetically supports the contextual substitutions necessary
  for the 'init' (Initial Forms) feature.

* otftotfm: When you make a virtual font named "foo", remove any entries
  for "foo" from VENDOR.map.


Version 0.13   27.Jun.2003

* --without-kpathsea works. Problem reported by Adam Lindsay.


Version 0.12   27.Jun.2003

* otftotfm: Better error messages when directories cannot be found.
  Reported by Bruce D'Arcus.


Version 0.11   26.Jun.2003

* otftotfm: Handles the contextual substitutions necessary for 'cswh'
  (Contextual Swash) and 'fina' (Terminal Forms) features.


Version 0.10   26.Jun.2003

* otftotfm: Update ls-R files for new encodings.


Version 0.9   25.Jun.2003

* otftotfm: psfonts.map lines contain the file name only (no directories).
  Requested by Norbert Preining.

* otftotfm: Properly report errors when encoding files can't be found.

* Fix kpathsea searching and dependency problems reported by Bruce D'Arcus
  and Claire Connelly, among others.

* Fix templates to allow compilation with GCC 2.95.


Version 0.8   23.Jun.2003

* otftopl has been renamed to otftotfm. The new program takes different
  options. Automatic mode is particularly different, and TFM output is now
  the default.

* otftotfm: Automatic mode now sticks files into a TeX Directory Structure
  hierarchy. This works well with many TeX installations. It also