@@ -133,9 +133,9 @@ TFM	TEXMF/fonts/tfm/\fIvendor\fR/\fItypeface\fR/	\fIfontname\fR[--base].tfm
 VF	TEXMF/fonts/vf/\fIvendor\fR/\fItypeface\fR/	\fIfontname\fR.vf
 PL	TEXMF/fonts/pl/\fIvendor\fR/\fItypeface\fR/	\fIfontname\fR[--base].pl
 VPL	TEXMF/fonts/vpl/\fIvendor\fR/\fItypeface\fR/	\fIfontname\fR.vpl
-encoding	TEXMF/dvips/	a_\fIsignature\fR.enc
+encoding	TEXMF/dvips/\fIvendor\fR/	a_\fIsignature\fR.enc
 PFB font	TEXMF/fonts/type1/\fIvendor\fR/\fItypeface\fR/	\fIPSfontname\fR.pfb
-psfonts.map	TEXMF/dvips/	\fIvendor\fR.map
+psfonts.map	TEXMF/dvips/\fIvendor\fR/	\fIvendor\fR.map
 .TE
 .PP
 "TEXMF" stands for the writable $TEXMF directory. \fIFontname\fR is the
